--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset = "UTF-8">
     <meta name = 'viewport' content = "width=device-width"/>
-    <title>WanderList</title>
+    <title>onlife</title>
 </head>
 <body>
     <div id="root"></div>
